--- a/templates/projects.html
+++ b/templates/projects.html
@@ -67,6 +67,9 @@
                         <input type="text" id="project-name" name="project-name" placeholder="Nome do projeto" required>
                     </div>
                     <div class="form-group">
+                        <input type="text" id="project-client" name="project-client" placeholder="Cliente" required>
+                    </div>
+                    <div class="form-group">
                         <textarea id="description" name="description" rows="3" placeholder="Descrição"></textarea>
                     </div>
                     <div class="form-group">
